<resources>
    <string name="app_name">Androdek</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="permission_denied">Permission denied</string>

    <string name="ico_config">{md-build}</string>

    <string name="config_url">API URL</string>
    <string name="config_discogs">DISCOGS token</string>
    <string name="config_save">Save</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="albums">Albums</string>
    <string name="books">Books</string>
    <string name="movies">Movies</string>
    <string name="tvshows">TV Shows</string>
    <string name="friends">Friends</string>
    <string name="loans">Loans</string>
    <string name="my_collec">My collection</string>
    <string name="my_collec_albums">Albums</string>
    <string name="my_collec_books">Books</string>
    <string name="my_collec_movies">Movies</string>
    <string name="my_collec_tvshows">TV Shows</string>
    <string name="all_collec">All collection</string>
    <string name="all_collec_albums">Albums</string>
    <string name="all_collec_books">Books</string>
    <string name="all_collec_movies">Movies</string>
    <string name="all_collec_tvshows">TV Shows</string>

    <string name="action_settings">Settings</string>
    <string name="remove_from_collec">Remove from my collection</string>
    <string name="add_to_collec">Add to my collection</string>

    <string name="all_list">All</string>
    <string name="my_list">My list</string>

    <string name="title_activity_album">AlbumActivity</string>
    <string name="no_albums">No albums</string>
    <string name="my_albums">No albums</string>
    <string name="scan_album_code">Scan album barcode</string>
    <string name="search_discogs">Search on Discogs</string>
    <string name="album_genre">Genre</string>
    <string name="album_year">Year</string>
    <string name="album_country">Country</string>
    <string name="album_tracks">Tracks</string>
    <string name="album_add">Add this album</string>
    <string name="album_more">Load more albums</string>
    <string name="album_detail_loading">Album details loading</string>
    <string name="loading_albums">Loading albums list</string>

    <string name="title_activity_book">BookActivity</string>
    <string name="no_books">No books</string>

    <string name="title_activity_movie">MovieActivity</string>
    <string name="no_movies">No movies</string>

    <string name="title_activity_tv_show">TvShowActivity</string>
    <string name="no_tvshows">No tv shows</string>

    <string name="error_scan">Scan error</string>

</resources>
