<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="60dp"
    tools:showIn="@layout/activity_home"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_collec"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collec_albums"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/myCollecAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collec_books"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/myCollecBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collec_movies"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/myCollecMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collec_tvshows"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/myCollecTvshows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_collec"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_collec_albums"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/allCollecAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_collec_books"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/allCollecBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_collec_movies"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/allCollecMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_collec_tvshows"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/allCollecTvshows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
