<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar_login"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/login_form_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/prompt_login"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_login"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24dp"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
