<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context="bzh.msansm1.androdek.config.ConfigActivity">

    <LinearLayout
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:id="@+id/information_url_linear"
            android:layout_height="48dp"
            android:layout_width="match_parent">

            <TextView
                android:text="@string/config_url"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/api_url"
                android:inputType="textUri"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/information_discogs_linear"
            android:layout_height="48dp"
            android:layout_width="match_parent">

            <TextView
                android:text="@string/config_discogs"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/dicogs_token"
                android:inputType="text"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:elevation="8dp"
        android:id="@+id/config_save"
        android:text="@string/config_save"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

</RelativeLayout>
