<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="52dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="4dp"
        android:paddingBottom="48dp">

        <LinearLayout
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/album_res_cover"
                    android:scaleType="fitXY"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/album_res_artist_linear"
                android:layout_height="48dp"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/album_res_artist"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/album_res_title_linear"
                android:layout_height="48dp"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/album_res_title"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/album_res_genre_linear"
                android:layout_height="48dp"
                android:layout_width="match_parent">

                <TextView
                    android:text="@string/album_genre"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

                <EditText
                    android:id="@+id/album_res_genre"
                    android:inputType="text"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/album_res_year_linear"
                android:layout_height="48dp"
                android:layout_width="match_parent">

                <TextView
                    android:text="@string/album_year"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

                <EditText
                    android:id="@+id/album_res_year"
                    android:inputType="text"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/album_res_country_linear"
                android:layout_height="48dp"
                android:layout_width="match_parent">

                <TextView
                    android:text="@string/album_country"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

                <EditText
                    android:id="@+id/album_res_country"
                    android:inputType="text"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="48dp"
                android:layout_width="match_parent">

                <TextView
                    android:text="@string/album_tracks"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/album_res_tracks_title"
                    android:layout_height="match_parent"
                    android:layout_width="280dp"
                    android:gravity="center_vertical"
                    android:paddingStart="24dp"/>

                <TextView
                    android:id="@+id/album_res_tracks_duration"
                    android:layout_height="match_parent"
                    android:layout_width="80dp"
                    android:gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:elevation="8dp"
        android:id="@+id/album_res_add"
        android:text="@string/album_add"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:visibility="gone"/>

</RelativeLayout>
